Fix flex wrap on random info section

--- a/style.css
+++ b/style.css
@@ -9,19 +9,18 @@ body {
     margin: 0;
     padding: 0;
 }
-body > * {
-    padding: 0px 200px;
-}
 
 .navbar {
     background-color: #1F2937;
     color: #ffffff;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 20px;
+    padding: 10px 200px;
 }
 h1 {
-    margin-right: auto;
+    flex: auto;
 }
 
 .top {
@@ -73,7 +72,8 @@ button {
 }
 .mid {
     display: flex;
-    gap: 50px;
+    flex-wrap: wrap;
+    gap: 150px;
     justify-content: center;
     margin: 50px
 }
@@ -122,6 +122,7 @@ button {
     margin: 60px 190px;
     padding: 10px;
     border-radius: 8px;
+    color: #F9FAF8;
 }
 
 .footer {
@@ -136,11 +137,12 @@ button {
     padding: 8px 20px;
     border-radius: 5px;
     background-color: #3882f6;
-    color: #E5E7EB;
+    color: #F9FAF8;
     border: none;
     font-weight: 700;
 }
 
 .action button {
     border: solid;
+    color: #F9FAF8;
 }
